# plutus-staking-experiment

./: README.md  cabal.project  default.nix  shell.nix  staking-escrow.cabal
src/Contract/: SimpleEscrow.hs
test/: Spec.hs
test/Spec/: SimpleEscrow.hs
